user update method modified