@@ -29,11 +29,11 @@ public class UserService {
 
     public UserDto createUser(UserDto userDto) {//as client
         Address address = addressRepository.save(addressFromDto(userDto));
-        return userRepository.save(User.fromDto(userDto, address,null,null,null,null)).toDto();
+        return userRepository.save(User.fromDto(userDto, address, null, null, null, null)).toDto();
     }
 
-    public List<UserDto> findAllUsers(String firstName,String lastName) {
-        return userRepository.findAllUsers(firstName,lastName)
+    public List<UserDto> findAllUsers(String firstName, String lastName) {
+        return userRepository.findAllUsers(firstName, lastName)
                 .stream()
                 .map(User::toDto)
                 .collect(Collectors.toList());
@@ -46,13 +46,28 @@ public class UserService {
     }
 
     public Optional<UserDto> updateUser(UUID id, UserDto userDto) {
-        List<TattooWork> tattooWorks= userDto.getTattooWorkIds().stream().map(tattooWorkRepository::findById).map(Optional::orElseThrow).collect(Collectors.toList());
-        List<TattooWork> favoriteTattooWorks=userDto.getTattooWorkIds().stream().map(tattooWorkRepository::findById).map(Optional::orElseThrow).collect(Collectors.toList());
-        List<Comment> comments=userDto.getTattooWorkIds().stream().map(commentRepository::findById).map(Optional::orElseThrow).collect(Collectors.toList());
-        List<User> favoriteArtists=userDto.getTattooWorkIds().stream().map(userRepository::findById).map(Optional::orElseThrow).collect(Collectors.toList());
-        Address address = addressRepository.save(addressFromDto(userDto));
+        List<TattooWork> tattooWorks = userDto.getTattooWorkIds()
+                .stream()
+                .map(tattooWorkRepository::findById)
+                .map(Optional::orElseThrow)
+                .toList();
+        List<TattooWork> favoriteTattooWorks = userDto.getTattooWorkIds().stream().map(tattooWorkRepository::findById).map(Optional::orElseThrow).collect(Collectors.toList());
+        List<Comment> comments = userDto.getTattooWorkIds().stream().map(commentRepository::findById).map(Optional::orElseThrow).collect(Collectors.toList());
+        List<User> favoriteArtists = userDto.getTattooWorkIds().stream().map(userRepository::findById).map(Optional::orElseThrow).collect(Collectors.toList());
         return Optional.ofNullable(userRepository.findById(id)
-                .map(user -> userRepository.save(User.fromDto(userDto, address,favoriteTattooWorks,tattooWorks,favoriteArtists,comments)))
+                .map(user -> {
+                    Address address = addressRepository.findById(user.getBusinessAddress().getId()).orElseThrow();
+                    address.setCity(userDto.getCity());
+                    address.setState(userDto.getState());
+                    address.setCountry(userDto.getCountry());
+                    address.setPostalCode(userDto.getPostalCode());
+                    address.setStreet(userDto.getStreet());
+                    address.setOtherInformation(userDto.getOtherInformation());
+                    addressRepository.save(address);
+                    User userToUpdate = User.fromDto(userDto, address, favoriteTattooWorks, tattooWorks, favoriteArtists, comments);
+                    userToUpdate.setId(id);
+                    return userRepository.save(userToUpdate);
+                })
                 .map(User::toDto)
                 .orElseThrow(UserNotFoundException::new));
     }
@@ -65,58 +80,58 @@ public class UserService {
         }
     }
 
-    public UserDto favoriteTattooArtist(UUID userId, UUID artistId){
-        User user =userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
-        User artist=userRepository.findById(artistId).orElseThrow(UserNotFoundException::new);
+    public UserDto favoriteTattooArtist(UUID userId, UUID artistId) {
+        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
+        User artist = userRepository.findById(artistId).orElseThrow(UserNotFoundException::new);
 
-        List<User> favouriteArtists= user.getFavouriteArtists();
+        List<User> favouriteArtists = user.getFavouriteArtists();
         favouriteArtists.add(artist);
         user.setFavouriteArtists(favouriteArtists);
         return userRepository.save(user).toDto();
     }
 
-    public void unfavoriteTattooArtist(UUID userId, UUID artistId){
-        User user =userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
-        User artist=userRepository.findById(artistId).orElseThrow(UserNotFoundException::new);
+    public void unfavoriteTattooArtist(UUID userId, UUID artistId) {
+        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
+        User artist = userRepository.findById(artistId).orElseThrow(UserNotFoundException::new);
 
-        List<User> favouriteArtists= user.getFavouriteArtists();
+        List<User> favouriteArtists = user.getFavouriteArtists();
         favouriteArtists.remove(artist);
         user.setFavouriteArtists(favouriteArtists);
         userRepository.save(user);
     }
 
-    public void unfavoriteTattooWork(UUID userId, UUID postId){
-        User user =userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
-        TattooWork tattooWork=tattooWorkRepository.findById(postId).orElseThrow();
+    public void unfavoriteTattooWork(UUID userId, UUID postId) {
+        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
+        TattooWork tattooWork = tattooWorkRepository.findById(postId).orElseThrow();
 
-        List<TattooWork> favoriteTattooWorks= user.getFavoriteTattooWorks();
+        List<TattooWork> favoriteTattooWorks = user.getFavoriteTattooWorks();
         favoriteTattooWorks.remove(tattooWork);
         user.setFavoriteTattooWorks(favoriteTattooWorks);
         userRepository.save(user);
     }
 
-    public UserDto favoriteTattooWork(UUID userId, UUID postId){
-        User user =userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
-        TattooWork tattooWork=tattooWorkRepository.findById(postId).orElseThrow();
+    public UserDto favoriteTattooWork(UUID userId, UUID postId) {
+        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
+        TattooWork tattooWork = tattooWorkRepository.findById(postId).orElseThrow();
 
-        List<TattooWork> favoriteTattooWorks= user.getFavoriteTattooWorks();
+        List<TattooWork> favoriteTattooWorks = user.getFavoriteTattooWorks();
         favoriteTattooWorks.add(tattooWork);
         user.setFavoriteTattooWorks(favoriteTattooWorks);
         return userRepository.save(user).toDto();
     }
 
-    public UserDto createArtistAccount(UUID id, UserDto userDto){//TODO
+    public UserDto createArtistAccount(UUID id, UserDto userDto) {//TODO
         return null;
     }
 
-    private Address addressFromDto(UserDto userDto){
+    private Address addressFromDto(UserDto userDto) {
         return Address.builder()
-                        .state(userDto.getState())
-                        .postalCode(userDto.getPostalCode())
-                        .country(userDto.getCountry())
-                        .city(userDto.getCity())
-                        .street(userDto.getStreet())
-                        .otherInformation(userDto.getOtherInformation())
-                        .build();
+                .state(userDto.getState())
+                .postalCode(userDto.getPostalCode())
+                .country(userDto.getCountry())
+                .city(userDto.getCity())
+                .street(userDto.getStreet())
+                .otherInformation(userDto.getOtherInformation())
+                .build();
     }
 }
